...
                    android:layout_toEndOf="@id/count"
                    android:iconifiedByDefault="false" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/direction_button"
                android:layout_below="@id/topbar"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/animal_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/direction_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="onLaunchDirectionClicked"
                android:text="Directions"
                app:cornerRadius="0dp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
...
