...
                android:text="@{String.valueOf(vm.numSelectedAnimals)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <androidx.appcompat.widget.SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/recyclerView"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/plan_size_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
...
